--- a/pran.html
+++ b/pran.html
@@ -1,276 +1,223 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ms">
 <head>
-  <meta charset="UTF-8">
-  <meta name="robots" content="noindex, nofollow">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PRAN — Katalog & Borang Akaun | Kopusamaju</title>
+  <meta charset="utf-8" />
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PRAN — Produk Import Berkualiti | Kopusamaju Sabah Berhad</title>
 
-  <link rel="icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png">
+  <!-- Favicon -->
+  <link rel="icon" href="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" sizes="32x32">
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
+    :root {
+      --pran-red: #e41f26;
+      --accent: #d93a2e;
+      --muted: #6b6b6b;
+    }
+
     body {
-      background: linear-gradient(180deg, #7a0000 0%, #3a0000 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(180deg, #fff 0%, #f9f9f9 100%);
+      color: #222;
+      padding-bottom: 60px;
     }
 
-    header {
+    /* HERO */
+    .hero {
+      background: linear-gradient(180deg, rgba(228,31,38,0.05), rgba(0,0,0,0.0));
+      border-bottom: 1px solid rgba(0,0,0,0.05);
+      padding: 48px 0;
       text-align: center;
-      padding: 2.5rem 0;
     }
-    header img {
-      height: 85px;
-      margin-bottom: 1rem;
+    .hero img {
+      max-height: 100px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 18px rgba(0,0,0,0.1);
+      margin-bottom: 10px;
+    }
+    .hero h1 {
+      font-weight: 700;
+      color: var(--pran-red);
+      font-size: clamp(22px, 3vw, 30px);
+    }
+    .hero p {
+      color: var(--muted);
     }
 
-    /* Tab Navigation */
-    .tab-nav {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      border-bottom: 2px solid rgba(255, 204, 0, 0.3);
-      position: relative;
-      margin-bottom: 1.5rem;
-    }
+    /* Tabs */
     .tab-btn {
-      position: relative;
-      background: none;
-      border: none;
-      color: #fff;
-      font-weight: 600;
-      font-size: 1.1rem;
-      padding: 0.75rem 1rem;
+      padding: 10px 18px;
+      border-radius: 10px;
+      border: 1px solid rgba(0,0,0,0.1);
+      background: #fff;
       cursor: pointer;
-      transition: color 0.3s ease;
-    }
-    .tab-btn:hover {
-      color: #ffcc00;
+      font-weight: 600;
+      transition: all .25s ease;
+      margin-right: 8px;
     }
     .tab-btn.active {
-      color: #ffcc00;
-    }
-    .tab-highlight {
-      position: absolute;
-      bottom: -2px;
-      height: 3px;
-      width: 120px;
-      background-color: #ffcc00;
-      border-radius: 3px;
-      transition: all 0.3s ease;
-    }
-
-    /* Gallery */
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1rem;
-      margin-bottom: 3rem;
-    }
-    .gallery-item {
-      position: relative;
-      overflow: hidden;
-      border-radius: 12px;
-      cursor: pointer;
-      background-color: rgba(255,255,255,0.1);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .gallery-item img {
-      width: 100%;
-      height: auto;
-      display: block;
-      transition: transform 0.3s;
-    }
-    .gallery-item:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-    }
-    .gallery-item:hover img {
-      transform: scale(1.05);
-    }
-    .gallery-item .caption {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.6);
+      background: linear-gradient(180deg, var(--pran-red), var(--accent));
       color: #fff;
-      padding: 0.5rem;
-      text-align: center;
-      font-size: 0.95rem;
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
-    .gallery-item:hover .caption {
-      opacity: 1;
+      box-shadow: 0 4px 20px rgba(212,40,40,0.25);
     }
 
-    /* PDF Viewer */
-    .pdf-viewer {
-      border: 2px solid #ffcc00;
-      border-radius: 10px;
-      overflow: hidden;
-      background: #fff;
-      height: 80vh;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+    .switch-panel {
+      position: relative;
+      min-height: 400px;
     }
-    .pdf-viewer iframe {
+    .panel-inner {
+      opacity: 0;
+      transform: translateY(20px);
+      position: absolute;
+      inset: 0;
+      transition: all .4s ease;
+      pointer-events: none;
+    }
+    .panel-inner.show {
+      opacity: 1;
+      transform: translateY(0);
+      pointer-events: all;
+    }
+
+    /* PDF box */
+    .pdf-box {
+      border-radius: 12px;
+      overflow: hidden;
+      border: 1px solid rgba(0,0,0,0.1);
+      background: #fff;
+      height: 65vh;
+      min-height: 360px;
+    }
+    iframe, object {
       width: 100%;
       height: 100%;
       border: none;
     }
 
-    /* Buttons */
-    .btn-whatsapp {
-      background-color: #25d366;
-      border: none;
-      color: #fff;
-      font-weight: 600;
-      margin-top: 1.5rem;
-      transition: all 0.3s;
-    }
-    .btn-whatsapp:hover {
-      background-color: #1ebd56;
-      transform: scale(1.03);
+    .prod-gallery img {
+      max-height: 100px;
+      margin-right: 8px;
+      border-radius: 8px;
+      border: 1px solid rgba(0,0,0,0.1);
+      background: #fff;
+      padding: 5px;
     }
 
     footer {
       text-align: center;
-      padding: 2rem 1rem;
-      background: #220000;
-      color: #ccc;
-      margin-top: 4rem;
-      font-size: 0.9rem;
-    }
-
-    @media (max-width: 768px) {
-      .tab-nav {
-        gap: 1rem;
-      }
-      .tab-btn {
-        font-size: 1rem;
-      }
+      font-size: 14px;
+      color: #666;
+      margin-top: 50px;
+      border-top: 1px solid rgba(0,0,0,0.05);
+      padding-top: 15px;
     }
   </style>
 </head>
 <body>
-  <header>
+
+  <!-- HERO -->
+  <section class="hero">
     <img src="https://images.seeklogo.com/logo-png/25/1/pran-logo-png_seeklogo-258211.png" alt="PRAN Logo">
-    <h1>Produk PRAN</h1>
-    <p class="text-warning">Kopusamaju Sabah Berhad | Ejen Rasmi PRAN</p>
-  </header>
+    <h1>Produk Import Berkualiti — Diedarkan oleh Kopusamaju Sabah Berhad</h1>
+    <p>Ejen rasmi PRAN untuk pasaran tempatan</p>
+  </section>
 
-  <main class="container">
-    <!-- Galeri Produk -->
-    <section id="product-gallery">
-      <h2 class="text-warning mb-4">Galeri Produk</h2>
-      <div class="gallery">
-        <div class="gallery-item">
-          <img src="produk/product1.jpg" alt="Produk 1">
-          <div class="caption">Minuman Jus PRAN</div>
-        </div>
-        <div class="gallery-item">
-          <img src="produk/product2.jpg" alt="Produk 2">
-          <div class="caption">Snek Kering PRAN</div>
-        </div>
-        <div class="gallery-item">
-          <img src="produk/product3.jpg" alt="Produk 3">
-          <div class="caption">Produk Segera PRAN</div>
-        </div>
-      </div>
-    </section>
+  <main class="container mt-4">
+    <div class="d-flex justify-content-center mb-3">
+      <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
+      <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
+    </div>
 
-    <!-- Tab Navigation -->
-    <section class="text-center">
-      <div class="tab-nav">
-        <button class="tab-btn active" id="btn-catalog">Katalog Produk</button>
-        <button class="tab-btn" id="btn-form">Borang Akaun</button>
-        <div class="tab-highlight" id="tab-highlight"></div>
-      </div>
+    <div class="d-flex justify-content-center mb-4">
+      <img src="/pran/jus.png" alt="Jus PRAN">
+      <img src="/pran/minumankotak.png" alt="Minuman PRAN">
+      <img src="/pran/wafer.png" alt="Wafer PRAN">
+    </div>
 
-      <!-- PDF Viewer -->
-      <div class="pdf-viewer mb-3" id="pdf-display">
-        <iframe id="pdf-frame" src="catalog.pdf"></iframe>
-      </div>
-
-      <!-- Fallback -->
-      <div id="pdf-fallback" class="d-none">
-        <a href="catalog.pdf" id="pdf-download-link" class="btn btn-warning btn-lg">
-          Lihat / Muat Turun Dokumen
-        </a>
-      </div>
-
-      <a href="https://wa.me/60128169367?text=Hi%20saya%20ingin%20order%20PRAN" target="_blank" class="btn btn-whatsapp btn-lg mt-3">
-        <i class="bi bi-whatsapp me-2"></i>Hubungi WhatsApp
+    <div class="text-center mb-3">
+      <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success">
+        <i class="bi bi-whatsapp me-2"></i>Hubungi (WhatsApp)
       </a>
-    </section>
+      <a id="open-new-tab" class="btn btn-outline-secondary ms-2" target="_blank">Buka di Tab Baru</a>
+    </div>
+
+    <div class="switch-panel">
+      <!-- KATALOG -->
+      <div id="panel-catalog" class="panel-inner show">
+        <h4>Katalog Produk PRAN</h4>
+        <div class="pdf-box mt-3">
+          <iframe src="catalog.pdf" title="Katalog PRAN"></iframe>
+          <object data="catalog.pdf" type="application/pdf" style="display:none;">
+            <p>Tidak dapat paparkan PDF. <a href="catalog.pdf" target="_blank">Klik di sini untuk buka katalog</a>.</p>
+          </object>
+        </div>
+        <div class="mt-3">
+          <a href="catalog.pdf" class="btn btn-primary" download>📥 Muat Turun Katalog</a>
+          <a id="catalog-google" class="btn btn-outline-primary" target="_blank">👁️ Lihat di Google Viewer</a>
+        </div>
+      </div>
+
+      <!-- BORANG -->
+      <div id="panel-form" class="panel-inner">
+        <h4>Borang Buka Akaun Kopusamaju</h4>
+        <div class="pdf-box mt-3">
+          <iframe src="borang-akaun.pdf" title="Borang Akaun"></iframe>
+          <object data="borang-akaun.pdf" type="application/pdf" style="display:none;">
+            <p>Tidak dapat paparkan PDF. <a href="borang-akaun.pdf" target="_blank">Klik di sini untuk buka borang</a>.</p>
+          </object>
+        </div>
+        <div class="mt-3">
+          <a href="borang-akaun.pdf" class="btn btn-primary" download>📥 Muat Turun Borang</a>
+          <a id="form-google" class="btn btn-outline-primary" target="_blank">👁️ Lihat di Google Viewer</a>
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer>
-    <p>© 2025 Kopusamaju Sabah Berhad | Ejen Rasmi PRAN</p>
+    <strong>Kopusamaju Sabah Berhad</strong> | Ejen Rasmi PRAN<br>
+    © <span id="year"></span> Kopusamaju Sabah Berhad. Laman ini tidak diindeks dan hanya untuk pelanggan sah berdaftar.
   </footer>
 
   <script>
-    const catalogBtn = document.getElementById("btn-catalog");
-    const formBtn = document.getElementById("btn-form");
-    const pdfFrame = document.getElementById("pdf-frame");
-    const pdfFallback = document.getElementById("pdf-fallback");
-    const pdfDownloadLink = document.getElementById("pdf-download-link");
-    const pdfContainer = document.getElementById("pdf-display");
-    const highlight = document.getElementById("tab-highlight");
+    document.getElementById("year").textContent = new Date().getFullYear();
 
-    const catalogPDF = "catalog.pdf";
-    const formPDF = "borang-akaun.pdf";
-
-    function switchTab(target) {
-      if (target === "catalog") {
-        pdfFrame.src = catalogPDF;
-        pdfDownloadLink.href = catalogPDF;
-        catalogBtn.classList.add("active");
-        formBtn.classList.remove("active");
-        moveHighlight(catalogBtn);
-      } else {
-        pdfFrame.src = formPDF;
-        pdfDownloadLink.href = formPDF;
-        formBtn.classList.add("active");
-        catalogBtn.classList.remove("active");
-        moveHighlight(formBtn);
-      }
-    }
-
-    function moveHighlight(activeBtn) {
-      const rect = activeBtn.getBoundingClientRect();
-      const parentRect = activeBtn.parentElement.getBoundingClientRect();
-      highlight.style.width = rect.width + "px";
-      highlight.style.left = (rect.left - parentRect.left) + "px";
-    }
-
-    catalogBtn.addEventListener("click", () => switchTab("catalog"));
-    formBtn.addEventListener("click", () => switchTab("form"));
-
-    window.addEventListener("resize", () => {
-      const active = document.querySelector(".tab-btn.active");
-      moveHighlight(active);
-    });
-
-    window.onload = function() {
-      moveHighlight(catalogBtn);
-      const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-      setTimeout(() => {
-        let supports = true;
-        try {
-          const doc = pdfFrame.contentDocument;
-          if (!doc || !doc.body) supports = false;
-        } catch (err) {
-          supports = false;
-        }
-        if (isMobile || !supports) {
-          pdfContainer.classList.add("d-none");
-          pdfFallback.classList.remove("d-none");
-        }
-      }, 1500);
+    const tabs = document.querySelectorAll(".tab-btn");
+    const panels = {
+      catalog: document.getElementById("panel-catalog"),
+      form: document.getElementById("panel-form"),
     };
+    const openNewTabBtn = document.getElementById("open-new-tab");
+
+    const catalogUrl = "catalog.pdf";
+    const formUrl = "borang-akaun.pdf";
+
+    document.getElementById("catalog-google").href =
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/catalog.pdf") + "&embedded=true";
+    document.getElementById("form-google").href =
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/borang-akaun.pdf") + "&embedded=true";
+
+    function switchTo(target) {
+      tabs.forEach((btn) => {
+        btn.classList.toggle("active", btn.dataset.target === target);
+      });
+      Object.keys(panels).forEach((key) => {
+        panels[key].classList.toggle("show", key === target);
+      });
+      openNewTabBtn.href = target === "catalog" ? catalogUrl : formUrl;
+    }
+
+    tabs.forEach((btn) =>
+      btn.addEventListener("click", () => switchTo(btn.dataset.target))
+    );
+    openNewTabBtn.href = catalogUrl;
   </script>
 </body>
 </html>
