--- a/pran.html
+++ b/pran.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<html lang="ms">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,10 +44,7 @@
       z-index: 2000;
       box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     }
-    .scam-banner strong {
-      text-transform: uppercase;
-      color: #ffe400;
-    }
+    .scam-banner strong { text-transform: uppercase; color: #ffe400; }
 
     /* ===== HERO ===== */
     .hero {
@@ -64,16 +60,18 @@
       border-radius: 12px;
       box-shadow: 0 4px 18px rgba(0,0,0,0.1);
     }
-    .hero h1 {
-      font-weight: 700;
-      color: var(--pran-red);
-    }
-    .hero p {
-      color: var(--muted);
-    }
+    .hero h1 { font-weight: 700; color: var(--pran-red); }
+    .hero p { color: var(--muted); }
 
     /* ===== Tabs ===== */
+    .tabs-container {
+      overflow-x: auto;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+      padding-bottom: 10px;
+    }
     .tab-btn {
+      display: inline-block;
       padding: 10px 20px;
       border-radius: 10px;
       border: 1px solid rgba(0,0,0,0.1);
@@ -81,7 +79,8 @@
       cursor: pointer;
       font-weight: 600;
       transition: all .3s ease;
-      margin: 0 5px;
+      margin: 0 5px 5px 0;
+      white-space: nowrap;
     }
     .tab-btn.active {
       background: linear-gradient(180deg, var(--pran-red), #c51919);
@@ -125,30 +124,12 @@
     }
 
     @media (max-width: 768px) {
-      .pdf-box {
-        height: auto;
-        min-height: 400px;
-        aspect-ratio: 3 / 4;
-      }
+      .pdf-box { height: auto; min-height: 400px; aspect-ratio: 3 / 4; }
+      .pdf-box iframe { min-height: 500px; }
     }
-
-    .pdf-box iframe {
-  min-height: 75vh;
-}
-
-@media (max-width:768px){
-  .pdf-box iframe {
-    min-height: 500px;
-  }
-}
-
 
     /* ===== Gallery ===== */
-    .gallery-title {
-      text-align: center;
-      margin-bottom: 25px;
-      color: var(--pran-red);
-    }
+    .gallery-title { text-align: center; margin-bottom: 25px; color: var(--pran-red); }
     .gallery-item img {
       width: 100%;
       height: 240px;
@@ -214,19 +195,19 @@
 
     <!-- TABS -->
     <section class="py-5 border-top">
-      <div class="d-flex flex-wrap justify-content-center align-items-center gap-2 mb-4">
+      <div class="tabs-container d-flex flex-wrap justify-content-start align-items-center gap-2 mb-4">
         <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
         <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
         <a id="open-new-tab" class="tab-btn" target="_blank">Buka di Tab Baru</a>
-        <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success">
+        <a id="catalog-google" class="btn btn-outline-danger ms-2" target="_blank">👁️ Lihat Katalog</a>
+        <a id="form-google" class="btn btn-outline-danger ms-2" target="_blank">👁️ Lihat Borang</a>
+        <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success ms-2">
           <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
         </a>
       </div>
-    </section>
 
-    <!-- PDF SECTIONS -->
-    <section class="py-5 border-top">
-      <div class="switch-panel pb-5"><!-- TAMBAH PADDING BAWAH -->
+      <!-- PDF PANELS -->
+      <div class="switch-panel pb-5">
         <!-- KATALOG -->
         <div id="panel-catalog" class="panel-inner show">
           <h4 class="text-center mb-3 text-danger">Katalog Produk PRAN</h4>
@@ -235,7 +216,6 @@
           </div>
           <div class="text-center mb-5">
             <a href="catalog.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
-            <a id="catalog-google" class="btn btn-outline-danger ms-2" target="_blank">👁️ Lihat di Google Viewer</a>
           </div>
         </div>
 
@@ -247,17 +227,18 @@
           </div>
           <div class="text-center mb-5">
             <a href="borang-akaun.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
-            <a id="form-google" class="btn btn-outline-danger ms-2" target="_blank">👁️ Lihat di Google Viewer</a>
           </div>
         </div>
       </div>
-    </section>&nbsp;&nbsp;
+    </section>
 
     <!-- FOOTER -->
     <footer style="margin-top:80px;">
       <strong>Kopusamaju Sabah Berhad</strong> | Ejen Rasmi PRAN<br>
       © <span id="year"></span> Kopusamaju Sabah Berhad.
     </footer>
+
+  </main>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -286,7 +267,7 @@
       openNewTabBtn.href = target === "catalog" ? catalogUrl : formUrl;
     }
 
-    tabs.forEach(btn => btn.addEventListener("click", () => switchTo(btn.dataset.target)));
+    tabs.forEach(btn => { if(btn.dataset.target) btn.addEventListener("click", () => switchTo(btn.dataset.target)); });
     openNewTabBtn.href = catalogUrl;
 
     // Lightbox init
